[package]
name = "breaking_bitcoin"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.5"
bitcoin = {version = "0.32.6", features = ["rand", "serde"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rayon = {version = "1.10.0"}
tokio = {version = "1.45.1", features = ["full"]}
crossterm = "0.29.0"
csv = "1.3.1"